k8s-resources/stockelper/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockelper-app-service
  namespace: stockelper
  labels:
    app: stockelper-app
spec:
  selector:
    app: stockelper-app
  ports:
    - port: 30300 
      targetPort: 8000
      protocol: TCP
  type: NodePort
  sessionAffinity: ClientIP
